Fixed visible input and bottom pad

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -309,7 +309,7 @@ hr {
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-  padding-bottom: 5%;
+  padding-bottom: 15%;
 }
 
 // #home-center {
